--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,3 +5,7 @@
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_POINTING=y
+
+# Don't show layer status
+#CONFIG_CUSTOM_WIDGET_BATTERY_STATUS=n
+CONFIG_CUSTOM_WIDGET_LAYER_STATUS=n
